[metadata]
name = pebbles_bot
version = 0.3.0
description = Telegram bot that runs Linux shell commands
long_description = file: README.md
long_description_content_type = text/markdown
author = Lab-Brat
author_email = labbrat_social@pm.me
url = https://github.com/Lab-Brat/pyLookout
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux

[options]
python_requires = >=3.6
include_package_data = True
packages = pebbles_bot
install_requires =
    pytelegrambotapi
    paramiko
    pyyaml

[options.entry_points]
console_scripts =
    pebot = pebbles_bot.pebot:main
